--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,3 +1,24 @@
-<h2 id="title">Welcome to Ember</h2>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">AAU-Food</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              {{#link-to "index" tagName="li"}}{{#link-to "index"}}Home{{/link-to}}{{/link-to}}
+              {{#link-to "about" tagName="li"}}{{#link-to "about"}}About{{/link-to}}{{/link-to}}
+            </ul>
+        </div>
+    </div>
+</nav>
 
-{{outlet}}
+<div class="container">
+  {{outlet}}
+</div>
