--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,16 +1,49 @@
 <h1>Mensa</h1>
 {{#if mensa.mains.length}}
+  {{#each mensa.mains as |menu index|}}
+      <h3>{{format-mensa-menu index}}</h3>
+      <ul>
+        {{#each menu.name as |menuItem|}}
+            <li>{{menuItem}}</li>
+        {{/each}}
+      </ul>
+  {{/each}}
+{{else}}
+    Nix Mensa heute, sorry
+{{/if}}
+
+<h1>Uniwirt</h1>
+{{#if uniwirt.mains.length}}
     <ul>
-      {{#each mensa.mains as |menu index|}}
-          <li>{{format-mensa-menu index}}</li>
-          <ul>
-            {{#each menu.name as |menuItem|}}
-                <li>{{menuItem}}</li>
-            {{/each}}
-          </ul>
+      {{#each uniwirt.starters as |starter|}}
+          <li>{{starter.name}}</li>
+      {{/each}}
+    </ul>
+
+    <ul>
+      {{#each uniwirt.mains as |main|}}
+          <li>{{main.name}} : {{main.price}}</li>
       {{/each}}
     </ul>
 {{else}}
-    false
+    Nix Uniwirt heute, sorry
 {{/if}}
+
+<h1>Mittagstisch</h1>
+{{#if mittagstisch.mains.length}}
+    <ul>
+      {{#each mittagstisch.starters as |starter|}}
+          <li>{{starter.name}}</li>
+      {{/each}}
+    </ul>
+
+    <ul>
+      {{#each mittagstisch.mains as |main|}}
+          <li>{{main.name}} : {{main.price}}</li>
+      {{/each}}
+    </ul>
+{{else}}
+    Nix Mittagstisch heute, sorry
+{{/if}}
+
 {{outlet}}
