--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -8,12 +8,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">AAU-Food</a>
+          {{#link-to "index" class="navbar-brand"}}AAU-Food{{/link-to}}
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               {{#link-to "index" tagName="li"}}{{#link-to "index"}}Home{{/link-to}}{{/link-to}}
               {{#link-to "about" tagName="li"}}{{#link-to "about"}}About{{/link-to}}{{/link-to}}
+              {{#link-to "test" tagName="li"}}{{#link-to "test"}}Component loaded{{/link-to}}{{/link-to}}
             </ul>
         </div>
     </div>
