--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-inverse navbar-full">
+<nav id="navbar" class="navbar navbar-dark bg-inverse navbar-full">
   {{#link-to "index" class="navbar-brand"}}AAU-Food{{/link-to}}
 
     <ul class="nav navbar-nav">
