--- a/frontend/app/templates/components/menu-list.hbs
+++ b/frontend/app/templates/components/menu-list.hbs
@@ -1,21 +1,23 @@
-<div class="{{restaurant}}">
+<div class="card {{restaurant}}">
   {{yield}}
-  {{#if dataLoaded}}
-    {{#if menu.mains.length}}
-        <ul>
-          {{#each menu.starters as |starter|}}
-              <li>{{starter.name}}</li>
-          {{/each}}
-        </ul>
-        <ul>
-          {{#each menu.mains as |main|}}
-              <li>{{main.name}} : {{main.price}}</li>
-          {{/each}}
-        </ul>
-    {{else}}
-        <div class="text-center">Heute leider geschlossen.</div>
-    {{/if}}
-  {{else}}
-      <div class="text-center"><img src="/hourglass.gif"></div>
-  {{/if}}
+    <div class="card-block">
+      {{#if dataLoaded}}
+        {{#if menu.mains.length}}
+            <ul>
+              {{#each menu.starters as |starter|}}
+                  <li>{{starter.name}}</li>
+              {{/each}}
+            </ul>
+            <ul>
+              {{#each menu.mains as |main|}}
+                  <li>{{main.name}} : {{main.price}}</li>
+              {{/each}}
+            </ul>
+        {{else}}
+            Heute leider geschlossen.
+        {{/if}}
+      {{else}}
+          <div class="text-center"><img src="/hourglass.gif"></div>
+      {{/if}}
+    </div>
 </div>
