--- a/frontend/app/templates/about.hbs
+++ b/frontend/app/templates/about.hbs
@@ -1,2 +1,13 @@
-<h1>About</h1>
-{{outlet}}
+<div class="about">
+    <div class="row">
+        <div class="col-xs-4 col-xs-offset-4 back-icon-container">
+          {{#link-to "index"}}
+              <div class="card center-block">
+                  <div class="card-block">
+                      <i class="fa fa-cutlery fa-3x" aria-hidden="true"></i>
+                  </div>
+              </div>
+          {{/link-to}}
+        </div>
+    </div>
+</div>
