--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title><%= title %></title>
+    <title>AAU-Food</title>
+    <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/styles/app.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
 </head>
 <body>
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <%- include('partials/combined-menu-list', {restaurantName: 'Mensa', menu: mensa}) %>
+        </div>
+        <div class="col-md-4">
+            <%- include('partials/menu-list', {restaurantName: 'Uniwirt', menu: uniwirt}) %>
+        </div>
+        <div class="col-md-4">
+            <%- include('partials/menu-list', {restaurantName: 'Mittagstisch', menu: mittagstisch}) %>
+        </div>
+    </div>
+</div>
+<footer class="footer">
+    <a href="/about" class="footer-link">Crafted with <i class="fa heart fa-heart" aria-hidden="true"></i></a>
+</footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="http://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
