--- a/backend/views/about.ejs
+++ b/backend/views/about.ejs
@@ -38,7 +38,7 @@
 
         </div>
         <div class="row">
-            <div class="col-xs-4 col-xs-offset-4 text-xs-center">
+            <div class="col-xs-12 text-xs-center">
                 <h3>Under Construction</h3>
             </div>
         </div>
