--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>AAU-Food</title>
-    <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" sizes="192x192" href="favicons/fav_192.png">
+    <link rel="icon" sizes="194x194" href="favicons/fav_194.png">
+    <link rel="icon" sizes="32x32" href="favicons/fav_32.png">
+
+    <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/styles/app.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 <body>
 <div class="container">
@@ -30,6 +34,6 @@
     <a href="/about" class="footer-link">Crafted with <i class="fa heart fa-heart" aria-hidden="true"></i></a>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="http://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
+<script src="https://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
