--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,11 @@
 <% include partials/header.ejs %>
 
 <div class="container">
+    <!--<div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            div.
+            <%= weekDay %></div>
+    </div>-->
     <div class="row">
         <div class="col-md-4">
             <%- include('partials/combined-menu-list', {restaurantName: 'Mensa', menu: mensa}) %>
