--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,6 +4,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
+<script src="/modules/swipejs/build/swipe.min.js"></script>
 
 </body>
 </html>
