--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,20 @@
 <% var title = 'AAU Food'; %>
 <% include partials/header.ejs %>
 
+<div id='slider' class='swipe'>
+    <div class='swipe-wrap'>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+</div>
+
 <div class="container">
-    <!--<div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            div.
-            <%= weekDay %></div>
-    </div>-->
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4 weekday">
+            <h1><%= weekDay %></h1>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-4">
             <%- include('partials/combined-menu-list', {restaurantName: 'Mensa', menu: mensa}) %>
