--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,32 +1,16 @@
 <% var title = 'AAU Food'; %>
 <% include partials/header.ejs %>
 
-<div id='slider' class='swipe'>
-    <div class='swipe-wrap'>
-        <div></div>
-        <div></div>
-        <div></div>
+<div class="container">
+    <div id='slider' class='swipe'>
+        <div class='swipe-wrap'>
+            <% for(var d = 0; d < 7; d++) { %>
+            <%- include('partials/weekday-menu', {day: day + d}) %>
+            <% } %>
+        </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4 weekday">
-            <h1><%= weekDay %></h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
-            <%- include('partials/combined-menu-list', {restaurantName: 'Mensa', menu: mensa}) %>
-        </div>
-        <div class="col-md-4">
-            <%- include('partials/menu-list', {restaurantName: 'Uniwirt', menu: uniwirt}) %>
-        </div>
-        <div class="col-md-4">
-            <%- include('partials/menu-list', {restaurantName: 'Mittagstisch', menu: mittagstisch}) %>
-        </div>
-    </div>
-</div>
 
 <% include partials/footer.ejs %>
 
