--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,5 +6,7 @@
 <script src="https://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
 <script src="/modules/swipejs/build/swipe.min.js"></script>
 
+<%- include('partials/on-site-scripts') %>
+
 </body>
 </html>
