--- a/views/partials/on-site-scripts.ejs
+++ b/views/partials/on-site-scripts.ejs
@@ -1,12 +1,13 @@
 <script type="application/javascript">
     window.mySwipe = new Swipe(document.getElementById('slider'), {
-        startSlide: 2,
+        startSlide: 0,
         speed: 400,
-        auto: 3000,
         continuous: true,
         disableScroll: false,
         stopPropagation: false,
-        callback: function(index, elem) {},
-        transitionEnd: function(index, elem) {}
+        callback: function (index, elem) {
+        },
+        transitionEnd: function (index, elem) {
+        }
     });
 </script>
