--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <div id='slider' class='swipe'>
         <div class='swipe-wrap'>
             <% for(var d = 0; d < 7; d++) { %>
-            <%- include('partials/weekday-menu', {day: day + d}) %>
+            <%- include('partials/weekday-menu', {day: d}) %>
             <% } %>
         </div>
     </div>
