--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -117,6 +117,8 @@ html, body {
   min-height: 100%;
   padding-top: 1em;
   margin-bottom: 2rem;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 /* Swipe */
@@ -140,4 +142,9 @@ html, body {
 /* Weekday and Navigation*/
 .weekday {
   text-align: center;
+}
+
+.weekday-container {
+  padding-left: .9375rem;
+  padding-right: .9375rem;
 }
