--- a/views/partials/on-site-scripts.ejs
+++ b/views/partials/on-site-scripts.ejs
@@ -1,13 +1,22 @@
 <script type="application/javascript">
+    var dayStr = location.href.substring(location.href.lastIndexOf("/") + 1)
+    var day = +dayStr;
+
     window.mySwipe = new Swipe(document.getElementById('slider'), {
-        startSlide: 0,
+        startSlide: sanitizeDay(day),
         speed: 400,
-        continuous: true,
+        continuous: false,
         disableScroll: false,
-        stopPropagation: false,
-        callback: function (index, elem) {
-        },
-        transitionEnd: function (index, elem) {
-        }
     });
+
+    function sanitizeDay(incDay) {
+        if (incDay == null || isNaN(incDay)) {
+            return ((new Date()).getDay() + 6) % 7;
+        } else {
+            if (incDay < 0) {
+                incDay = 7 + (incDay % 7);
+            }
+            return incDay % 7;
+        }
+    }
 </script>
