--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,15 @@
 <% var title = 'AAU Food'; %>
 <% include partials/header.ejs %>
 
+<div class="nav-icons-center">
+        <span class="nav-icon left center">
+             <i class="fa fa-angle-left" aria-hidden="true"></i>
+        </span>
+        <span class="nav-icon right center">
+             <i class="fa fa-angle-right" aria-hidden="true"></i>
+        </span>
+</div>
+
 <div class="container">
     <div id='slider' class='swipe'>
         <div class='swipe-wrap'>
