--- a/views/partials/weekday-menu.ejs
+++ b/views/partials/weekday-menu.ejs
@@ -1,8 +1,16 @@
 <% day = day % 7 %>
 <div class="weekday-container">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4 weekday">
-            <h1><%= weekDayName(day) %></h1>
+        <div class="col-md-4 col-md-offset-4 weekday-header">
+            <span class="weekday">
+                <span class="nav-icon left top pull-left">
+                    <i class="fa fa-angle-left" aria-hidden="true"></i>
+                </span>
+                <%= weekDayName(day) %>
+                <span class="nav-icon right top pull-right">
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </span>
+            </span>
         </div>
     </div>
     <div class="row">
