Initialize Redis client only one time. Only count unique visitors a day.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,10 @@
 <footer class="footer">
-    <span class="daily-counter">
+    <span class="daily-counter" title="Tägliche Besucher">
         <i class="fa fa-fw fa-clock-o" aria-hidden="true"></i>
         <%= visitorStats.dailyVisitors %>
     </span>
     <a href="/about" class="footer-link">Crafted with <i class="fa heart fa-heart" aria-hidden="true"></i></a>
-    <span class="overall-counter">
+    <span class="overall-counter" title="Gesamt Besucher">
          <%= visitorStats.overallVisitors %>
         <i class="fa fa-fw fa-calendar-o" aria-hidden="true"></i>
     </span>
