--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -117,14 +117,21 @@ body {
 .menu-list .menu-list-group .list-group-item, .combined-menu-list .menu-list-group .list-group-item {
   background: none;
   padding-top: 0;
-  padding-bottom: 0.25rem;
+  padding-bottom: 0rem;
   border: none; }
 .menu-list .menu-list-group .price-pill, .combined-menu-list .menu-list-group .price-pill {
   margin-right: -20px;
   margin-top: 0.125rem; }
 
+.combined-menu-list .menu-list-group .list-group-item:not(:last-child) {
+  padding-bottom: 0.25rem; }
 .combined-menu-list .price-pill {
   margin-top: 0.125rem; }
+
+.menu-list .menu-list-group.starters .list-group-item:not(:last-child) {
+  padding-bottom: 0.25rem; }
+.menu-list .menu-list-group.mains .list-group-item:not(:last-child) {
+  padding-bottom: 0.5rem; }
 
 /*Restaurant-specific*/
 .mittagstisch .card-header, .mittagstisch .price-pill {
