--- a/views/partials/combined-menu-list.ejs
+++ b/views/partials/combined-menu-list.ejs
@@ -13,14 +13,19 @@
         </div>
         <% } else { %>
         <% menu.mains.forEach(function(singleMenu, index){ %>
-        <span class="label label-default label-pill price-pill pull-xs-right"><%= singleMenu.price + " €" %></span>
-        <h5><%= (index < 2) ? "Menü Classic " + (index + 1) : "Tagesteller" %></h5>
-        <ul class="list-group menu-list-group">
-            <% singleMenu.name.forEach(function(menuItem){ %>
-            <li class="list-group-item"><%= menuItem %></li>
+            <% if (singleMenu.name && singleMenu.name.length) { %>
+                <% if(singleMenu.price != null && !singleMenu.isInfo) { %>
+                    <span class="label label-default label-pill price-pill pull-xs-right"><%= singleMenu.price + " €" %></span>
+                <% } %>
+
+                <h5><%= getMensaMenuName(index, singleMenu) %></h5>
+                <ul class="list-group menu-list-group">
+                    <% singleMenu.name.forEach(function(menuItem){ %>
+                        <li class="list-group-item"><%= menuItem %></li>
+                    <% }); %>
+                </ul>
+                <% } %>
             <% }); %>
-        </ul>
-        <% }); %>
         <% } %>
     </div>
 </div>
