--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
         <%= visitorStats.dailyVisitors %>
     </span>
 
-    <%- footerPun %>
+    <%- getFooterPun() %>
 
     <span class="overall-counter" title="Besucher gesamt">
          <%= visitorStats.overallVisitors %>
