--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,9 @@
     <link rel="icon" sizes="194x194" href="favicons/fav_194.png">
     <link rel="icon" sizes="32x32" href="favicons/fav_32.png">
 
-    <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link href="/styles/app.css" rel="stylesheet">
+    <link href="/styles/app.css" rel="stylesheet"-->
+    <link href="/dist/bundle.css" rel="stylesheet">
 </head>
 <body>
