--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -1,5 +1,7 @@
-@import 'spinner';
-@import 'about';
+@import '~bootstrap/dist/css/bootstrap.css';
+@import '~font-awesome/css/font-awesome.css';
+@import 'spinner.scss';
+@import 'about.scss';
 
 /*Colors and definitions*/
 $mittagstischGreen: #5fb127;
