--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -25,6 +25,16 @@ body {
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+  .card-block {
+    .error p {
+      margin-bottom: 0.25rem;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
 }
 
 .menu-list, .combined-menu-list {
