--- a/views/partials/combined-menu-list.ejs
+++ b/views/partials/combined-menu-list.ejs
@@ -1,15 +1,18 @@
 <div class="card <%= restaurantName.toLowerCase() %> combined-menu-list">
     <h3 class="card-header"><%= restaurantName %></h3>
     <div class="card-block">
-        <% if (menu.closed){ %>
+        <% if (menu != null && menu.closed){ %>
         <div class="text-xs-center">
             <i class="fa fa-bed fa-2x" aria-hidden="true"></i><br>
             Heute leider geschlossen.
         </div>
-        <% } else if (menu.error) { %>
-        <div class="text-xs-center">
+        <% } else if (menu == null || menu.error) { %>
+        <div class="text-xs-center error">
             <i class="fa fa-frown-o fa-2x fa-fw" aria-hidden="true"></i><br>
-            Leider konnten wir die Daten nicht abrufen.
+            <p>Leider konnten wir die Daten nicht abrufen.</p>
+            <p>Sie sollten aber auf der <a href="<%= userFriendlyUrl(restaurantName.toLowerCase()) %>" target="_blank">Homepage
+                    des Restaurants</a> stehen.<br></p>
+            <p>Wir kümmern uns bald darum! <i class="fa fa-smile-o fa-fw" aria-hidden="true"></i></p>
         </div>
         <% } else { %>
         <% menu.mains.forEach(function(singleMenu, index){ %>
