--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -13,7 +13,7 @@ $outerPadding: 0.9375rem;
 
 /*General definitions*/
 body {
-  background-image: url("tileable_wood_texture.png");
+  background-image: url("tileable_wood_texture.jpg");
 }
 
 .center-block {
